# ecbl

./: README.md  pyproject.toml  requirements.txt
ecbl/: interface.py  utils.py
ecbl/constraints/: __init__.py  checker.py  conversions.py  polytope_conversions.py  vertex_layer.py
ecbl/heads/: __init__.py  as_head.py  base_head.py  constraints_head.py  independent_head.py  interface.py  stub.py  utils.py  wrapper.py
ecbl/heads/binary/: as_head.py  checker.py  constraints.py  constraints_constrainet_head.py  constraints_softmax_head.py  interface.py  stub.py  wrapper.py
notebooks/: 01_basic.ipynb  common.ipynb
